[package]
name = "trope"
description = "Config merging to YAML/JSON"
version = "0.1.0"
authors = ["bazaah <jobs2018@luxolus.com>"]
exclude = ["examples/*", ".vscode/*"]
repository = "https://github.com/bazaah/trope"
readme = "README.md"
license = "GPL-2.0-or-later"

[dependencies]
config = "*"
serde_yaml = "*"
serde_json = "1.0.24"
yaml-rust = "*"
clap = {version = "~2.27.0"}

