[package]
name = "trope"
description = "Config merging to YAML/JSON"
version = "0.1.1"
authors = ["bazaah <jobs2018@luxolus.com>"]
exclude = ["examples/*", ".vscode/*"]
repository = "https://github.com/bazaah/trope"
readme = "README.md"
license = "GPL-2.0-or-later"

[dependencies]
config = "0.9.0"
serde_yaml = "0.7.5"
serde_json = "1.0.26"
yaml-rust = "0.4.0"
clap = {version = "2.32.0"}

